--- a/src/main/resources/view/gui/CoinTossMenu.fxml
+++ b/src/main/resources/view/gui/CoinTossMenu.fxml
@@ -4,37 +4,40 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<BorderPane fx:id="borderPane" prefHeight="720.0" prefWidth="1080.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.gui.CoinTossMenu">
+<BorderPane fx:id="borderPane" prefHeight="720.0" prefWidth="1080.0" xmlns="http://javafx.com/javafx/11.0.1"
+            xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.gui.CoinTossMenu">
 
     <center>
         <VBox fx:id="vBox" alignment="CENTER" style="-fx-background-color: grey">
 
         </VBox>
     </center>
-   <top>
-      <HBox fx:id="secondPlayerHBox" alignment="CENTER" prefHeight="80.0" prefWidth="1080.0" style="-fx-background-color: blue;" BorderPane.alignment="CENTER">
-         <children>
-            <Text fx:id="secondPlayerText" fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="second player: ">
-               <font>
-                  <Font name="System Bold" size="24.0" />
-               </font>
-            </Text>
-         </children>
-      </HBox>
-   </top>
-   <bottom>
-      <VBox fx:id="firstPlayerHBox" alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="10.0" style="-fx-background-color: blue;" BorderPane.alignment="CENTER">
-         <children>
-            <Text fx:id="firstPlayerText" fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="first player: ">
-               <font>
-                  <Font name="System Bold" size="24.0" />
-               </font>
-            </Text>
-            <Button fx:id="startButton" onMouseClicked="#startToss" prefHeight="26.0" prefWidth="70.0" text="start" style="-fx-background-color: orange"/>
-            <Button onMouseClicked="#startGame" prefHeight="26.0" prefWidth="70.0" text="next" style="-fx-background-color: orange"/>
-         </children>
-      </VBox>
-   </bottom>
-
+    <top>
+        <HBox fx:id="secondPlayerHBox" alignment="CENTER" prefHeight="80.0" prefWidth="1080.0"
+              style="-fx-background-color: blue;" BorderPane.alignment="CENTER">
+            <children>
+                <Text fx:id="secondPlayerText" fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0"
+                      text="second player: ">
+                    <font>
+                        <Font name="System Bold" size="24.0"/>
+                    </font>
+                </Text>
+            </children>
+        </HBox>
+    </top>
+    <bottom>
+        <VBox fx:id="firstPlayerHBox" alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="10.0"
+              style="-fx-background-color: blue;" BorderPane.alignment="CENTER">
+            <children>
+                <Text fx:id="firstPlayerText" fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="first player: ">
+                    <font>
+                        <Font name="System Bold" size="24.0"/>
+                    </font>
+                </Text>
+                <Button fx:id="button" onMouseClicked="#handleButton" prefHeight="26.0" prefWidth="100.0"
+                        text="Toss Coin" style="-fx-background-color: orange"/>
+            </children>
+        </VBox>
+    </bottom>
 
 </BorderPane>
