--- a/src/main/resources/view/gui/DuelMenuGui.fxml
+++ b/src/main/resources/view/gui/DuelMenuGui.fxml
@@ -2,18 +2,18 @@
 
 <?import java.net.*?>
 <?import javafx.geometry.*?>
+<?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
+<?import javafx.scene.effect.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.paint.*?>
 <?import javafx.scene.shape.*?>
+<?import javafx.scene.text.*?>
 
-<?import javafx.scene.Cursor?>
-<?import javafx.scene.effect.DropShadow?>
-<?import javafx.scene.paint.Color?>
-<BorderPane prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/11.0.1"
-            xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.gui.DuelMenuGui">
+<BorderPane prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.gui.DuelMenuGui">
 
     <stylesheets>
-        <URL value="@styles/DuelMenuGui.css"/>
+        <URL value="@styles/DuelMenuGui.css" />
     </stylesheets>
 
     <center>
@@ -25,174 +25,173 @@
         <HBox alignment="CENTER">
             <BorderPane prefHeight="600" prefWidth="210">
                 <top>
-                    <!--            opponent lp-->
-                    <Rectangle height="50" width="210"/>
+                    <VBox style="-fx-background-color: black">
+                        <ProgressBar minWidth="210" progress="1" fx:id="opponentProgressBar" style="-fx-accent: green"/>
+                        <Text style="-fx-fill: white" text="opponent nickname: " fx:id="opponentNickNameText"/>
+                        <Text style="-fx-fill: white" text="opponent username: " fx:id="opponentUserNameText"/>
+                    </VBox>
+<!--                    <Rectangle height="50" width="210"/>-->
                 </top>
                 <center>
-                    <VBox alignment="CENTER">
+                    <VBox alignment="CENTER" style="-fx-background-color: black">
                         <HBox alignment="CENTER">
-                            <Rectangle fx:id="selectedCard" height="307" width="210"/>
+                            <Rectangle fx:id="selectedCard" height="307" width="210" />
                         </HBox>
                         <HBox alignment="CENTER">
-                            <Label fx:id="selectedCardDescription" alignment="TOP_LEFT" prefHeight="193" prefWidth="210"
-                                   textAlignment="JUSTIFY" wrapText="true">
+                            <Label fx:id="selectedCardDescription" alignment="TOP_LEFT" prefHeight="193" prefWidth="210" textAlignment="JUSTIFY" wrapText="true">
                                 <padding>
-                                    <Insets bottom="5.0" left="10.0" right="10.0" top="5.0"/>
+                                    <Insets bottom="5.0" left="10.0" right="10.0" top="5.0" />
                                 </padding>
                             </Label>
                         </HBox>
                     </VBox>
                 </center>
                 <bottom>
-                    <!--            player lp-->
-                    <Rectangle height="50" width="210"/>
+                    <VBox style="-fx-background-color: black">
+                        <ProgressBar minWidth="210" progress="1" fx:id="playerProgressBar" style="-fx-accent: green"/>
+                        <Text style="-fx-fill: white" text="player nickname: " fx:id="playerNickNameText"/>
+                        <Text style="-fx-fill: white" text="player username: " fx:id="playerUserNameText"/>
+                    </VBox>
+<!--                    <Rectangle height="50" width="210" />-->
                 </bottom>
             </BorderPane>
 
-            <BorderPane prefHeight="600" prefWidth="120" fx:id="buttonPane">
+            <BorderPane fx:id="buttonPane" prefHeight="600" prefWidth="120">
                 <center>
                     <VBox alignment="CENTER">
                         <HBox>
-                            <Button alignment="CENTER" prefHeight="26.0"
-                                    prefWidth="110.0" text="Next Phase" onMouseClicked="#nextPhase">
+                            <Button alignment="CENTER" onMouseClicked="#nextPhase" prefHeight="26.0" prefWidth="110.0" text="Next Phase">
                                 <cursor>
-                                    <Cursor fx:constant="HAND"/>
+                                    <Cursor fx:constant="HAND" />
                                 </cursor>
                                 <effect>
                                     <DropShadow>
                                         <color>
-                                            <Color red="1.0" green="1.0" blue="1.0" opacity="0.15"/>
+                                            <Color red="1.0" green="1.0" blue="1.0" opacity="0.15" />
                                         </color>
                                     </DropShadow>
                                 </effect>
                                 <HBox.margin>
-                                    <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
+                                    <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                                 </HBox.margin>
                             </Button>
                         </HBox>
                         <HBox>
-                            <Button alignment="CENTER" prefHeight="26.0"
-                                    prefWidth="110.0" text="Summon" onMouseClicked="#summonCard">
+                            <Button alignment="CENTER" onMouseClicked="#summonCard" prefHeight="26.0" prefWidth="110.0" text="Summon">
                                 <cursor>
-                                    <Cursor fx:constant="HAND"/>
+                                    <Cursor fx:constant="HAND" />
                                 </cursor>
                                 <effect>
                                     <DropShadow>
                                         <color>
-                                            <Color red="1.0" green="1.0" blue="1.0" opacity="0.15"/>
+                                            <Color red="1.0" green="1.0" blue="1.0" opacity="0.15" />
                                         </color>
                                     </DropShadow>
                                 </effect>
                                 <HBox.margin>
-                                    <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
+                                    <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                                 </HBox.margin>
                             </Button>
                         </HBox>
                         <HBox>
-                            <Button alignment="CENTER" prefHeight="26.0"
-                                    prefWidth="110.0" text="Set" onMouseClicked="#setCard">
+                            <Button alignment="CENTER" onMouseClicked="#setCard" prefHeight="26.0" prefWidth="110.0" text="Set">
                                 <cursor>
-                                    <Cursor fx:constant="HAND"/>
+                                    <Cursor fx:constant="HAND" />
                                 </cursor>
                                 <effect>
                                     <DropShadow>
                                         <color>
-                                            <Color red="1.0" green="1.0" blue="1.0" opacity="0.15"/>
+                                            <Color red="1.0" green="1.0" blue="1.0" opacity="0.15" />
                                         </color>
                                     </DropShadow>
                                 </effect>
                                 <HBox.margin>
-                                    <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
+                                    <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                                 </HBox.margin>
                             </Button>
                         </HBox>
                         <HBox>
-                            <Button alignment="CENTER" prefHeight="26.0"
-                                    prefWidth="110.0" text="Change Position" onMouseClicked="#changePosition">
+                            <Button alignment="CENTER" onMouseClicked="#changePosition" prefHeight="26.0" prefWidth="110.0" text="Change Position">
                                 <cursor>
-                                    <Cursor fx:constant="HAND"/>
+                                    <Cursor fx:constant="HAND" />
                                 </cursor>
                                 <effect>
                                     <DropShadow>
                                         <color>
-                                            <Color red="1.0" green="1.0" blue="1.0" opacity="0.15"/>
+                                            <Color red="1.0" green="1.0" blue="1.0" opacity="0.15" />
                                         </color>
                                     </DropShadow>
                                 </effect>
                                 <HBox.margin>
-                                    <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
+                                    <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                                 </HBox.margin>
                             </Button>
                         </HBox>
                         <HBox>
-                            <Button alignment="CENTER" prefHeight="26.0"
-                                    prefWidth="110.0" text="Attack" onMouseClicked="#attack">
+                            <Button alignment="CENTER" onMouseClicked="#attack" prefHeight="26.0" prefWidth="110.0" text="Attack">
                                 <cursor>
-                                    <Cursor fx:constant="HAND"/>
+                                    <Cursor fx:constant="HAND" />
                                 </cursor>
                                 <effect>
                                     <DropShadow>
                                         <color>
-                                            <Color red="1.0" green="1.0" blue="1.0" opacity="0.15"/>
+                                            <Color red="1.0" green="1.0" blue="1.0" opacity="0.15" />
                                         </color>
                                     </DropShadow>
                                 </effect>
                                 <HBox.margin>
-                                    <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
+                                    <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                                 </HBox.margin>
                             </Button>
                         </HBox>
                         <HBox>
-                            <Button alignment="CENTER" prefHeight="26.0"
-                                    prefWidth="110.0" text="Activate Effect" onMouseClicked="#activateEffect">
+                            <Button alignment="CENTER" onMouseClicked="#activateEffect" prefHeight="26.0" prefWidth="110.0" text="Activate Effect">
                                 <cursor>
-                                    <Cursor fx:constant="HAND"/>
+                                    <Cursor fx:constant="HAND" />
                                 </cursor>
                                 <effect>
                                     <DropShadow>
                                         <color>
-                                            <Color red="1.0" green="1.0" blue="1.0" opacity="0.15"/>
+                                            <Color red="1.0" green="1.0" blue="1.0" opacity="0.15" />
                                         </color>
                                     </DropShadow>
                                 </effect>
                                 <HBox.margin>
-                                    <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
+                                    <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                                 </HBox.margin>
                             </Button>
                         </HBox>
                         <HBox>
-                            <Button alignment="CENTER" prefHeight="26.0"
-                                    prefWidth="110.0" text="Show Graveyard" onMouseClicked="#showGraveyard">
+                            <Button alignment="CENTER" onMouseClicked="#showGraveyard" prefHeight="26.0" prefWidth="110.0" text="Show Graveyard">
                                 <cursor>
-                                    <Cursor fx:constant="HAND"/>
+                                    <Cursor fx:constant="HAND" />
                                 </cursor>
                                 <effect>
                                     <DropShadow>
                                         <color>
-                                            <Color red="1.0" green="1.0" blue="1.0" opacity="0.15"/>
+                                            <Color red="1.0" green="1.0" blue="1.0" opacity="0.15" />
                                         </color>
                                     </DropShadow>
                                 </effect>
                                 <HBox.margin>
-                                    <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
+                                    <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                                 </HBox.margin>
                             </Button>
                         </HBox>
                         <HBox>
-                            <Button alignment="CENTER" prefHeight="26.0"
-                                    prefWidth="110.0" text="Surrender" onMouseClicked="#surrender">
+                            <Button alignment="CENTER" onMouseClicked="#surrender" prefHeight="26.0" prefWidth="110.0" text="Surrender">
                                 <cursor>
-                                    <Cursor fx:constant="HAND"/>
+                                    <Cursor fx:constant="HAND" />
                                 </cursor>
                                 <effect>
                                     <DropShadow>
                                         <color>
-                                            <Color red="1.0" green="1.0" blue="1.0" opacity="0.15"/>
+                                            <Color red="1.0" green="1.0" blue="1.0" opacity="0.15" />
                                         </color>
                                     </DropShadow>
                                 </effect>
                                 <HBox.margin>
-                                    <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
+                                    <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                                 </HBox.margin>
                             </Button>
                         </HBox>
