--- a/src/main/resources/view/gui/ShopMenuGui.fxml
+++ b/src/main/resources/view/gui/ShopMenuGui.fxml
@@ -3,16 +3,14 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<?import javafx.scene.text.Text?>
-<AnchorPane prefHeight="720.0" prefWidth="1080.0" xmlns="http://javafx.com/javafx/11.0.1"
-            xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.gui.ShopMenuGui" style="-fx-background-color: black">
+<AnchorPane prefHeight="720.0" prefWidth="1080.0" style="-fx-background-color: black" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.gui.ShopMenuGui">
 
 
-    <GridPane fx:id="gridPane" alignment="CENTER" hgap="10.0" vgap="5.0"/>
+    <GridPane fx:id="gridPane" alignment="CENTER" hgap="10.0" vgap="5.0" />
 
 
 
-    <Button onMouseClicked="#backToMainMenu" prefHeight="26.0" prefWidth="100.0" text="back" layoutX="1225" layoutY="20"/>
+    <Button layoutX="1000.0" layoutY="20" onMouseClicked="#backToMainMenu" prefHeight="26.0" prefWidth="50.0" text="back" />
 
 
 </AnchorPane>
