--- a/src/main/resources/view/gui/CardCreatorMenuGui.fxml
+++ b/src/main/resources/view/gui/CardCreatorMenuGui.fxml
@@ -24,11 +24,6 @@
                    stroke="BLACK" strokeType="INSIDE" width="143.0"/>
         <Text layoutX="515.0" layoutY="186.0" strokeType="OUTSIDE" strokeWidth="0.0"/>
         <Text layoutX="497.0" layoutY="174.0" strokeType="OUTSIDE" strokeWidth="0.0" text="price ="/>
-        <ImageView fitHeight="283.0" fitWidth="264.0" layoutX="66.0" layoutY="67.0">
-            <image>
-                <Image url="@Assets/Project-Assets-1.0.0/Assets/Arts/MBB_004100.dds.png"/>
-            </image>
-        </ImageView>
         <Text layoutX="514.0" layoutY="211.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Effect"/>
         <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#913131" height="32.0" layoutX="458.0" layoutY="187.0"
                    stroke="BLACK" strokeType="INSIDE" width="143.0"/>
@@ -91,5 +86,10 @@
               text="Pay attention: you have to input number and this option just for monsters card"/>
         <Button layoutX="28.0" layoutY="14.0" mnemonicParsing="false" onMouseClicked="#back"
                 style="-fx-background-color: darkred;" text="Back"/>
+        <ImageView fitHeight="246.0" fitWidth="232.0" layoutX="82.0" layoutY="86.0">
+            <image>
+                <Image url="@menu/deckphoto.png"/>
+            </image>
+        </ImageView>
     </children>
 </AnchorPane>
