--- a/src/main/resources/view/gui/MainMenuGui.fxml
+++ b/src/main/resources/view/gui/MainMenuGui.fxml
@@ -56,6 +56,24 @@
                     </Button>
                 </HBox>
                 <HBox alignment="CENTER">
+                    <Button alignment="CENTER" onMouseClicked="#startAiGame" prefHeight="26.0"
+                            prefWidth="100.0" text="Single Player">
+                        <cursor>
+                            <Cursor fx:constant="HAND"/>
+                        </cursor>
+                        <effect>
+                            <DropShadow>
+                                <color>
+                                    <Color red="1.0" green="1.0" blue="1.0" opacity="0.15"/>
+                                </color>
+                            </DropShadow>
+                        </effect>
+                        <HBox.margin>
+                            <Insets bottom="0" left="5.0" right="5.0" top="0"/>
+                        </HBox.margin>
+                    </Button>
+                </HBox>
+                <HBox alignment="CENTER">
                     <Button alignment="CENTER" onMouseClicked="#startDeckMenu" prefHeight="26.0"
                             prefWidth="100.0" text="Deck">
                         <cursor>
