--- a/src/main/resources/view/gui/CheatMenu.fxml
+++ b/src/main/resources/view/gui/CheatMenu.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane onKeyReleased="#enterTheCheat" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: black;"
+<AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: black;"
             xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.gui.CheatMenu">
     <cursor>
         <Cursor fx:constant="TEXT"/>
